--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/blair3003/footy-fixtures/issues"
   },
-  "homepage": "https://github.com/blair3003/footy-fixtures#readme"
+  "homepage": "https://github.com/blair3003/footy-fixtures#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3"
+  }
 }
